applications/openlookeng-repo/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-repo
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/permanent-redirect: https://download-openlookeng.osinfra.cn$request_uri
  name: openlookeng-repo-new-ingress
  namespace: openlookeng-repo
spec:
  tls:
    - hosts:
        - download.openlookeng.io
      secretName: openlookeng-repo-new-tls
  rules:
    - host: download.openlookeng.io

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: repo-nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header X-Frame-Options "SAMEORIGIN";
      add_header X-Cache-Status $upstream_cache_status;
      add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'unsafe-inline' *.googletagmanager.com *.baidu.com busuanzi.ibruce.info api.ip.sb cdn.jsdelivr.net;object-src 'none';frame-ancestors 'self'";
  name: openlookeng-repo-osinfra-ingress
  namespace: openlookeng-repo
spec:
  tls:
    - hosts:
        - download-openlookeng.osinfra.cn
      secretName: openlookeng-repo-osinfra-tls
  rules:
    - host: download-openlookeng.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: openlookeng-repo-internal
              servicePort: 80
            path: /
